--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+        <link
+            href="http://fonts.cdnfonts.com/css/pokemon-solid"
+            rel="stylesheet"
+        />
         <title>React App</title>
     </head>
     <body>
